fixed text-overflow issue in #currentInfo

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -1002,7 +1002,7 @@ aside#header {
       cursor: default;
 
       span {
-        display: inline-block;
+        // display: inline-block;
         .transition(padding-right .3s ease);
       }
 
